[tool.poetry]
name = "yglu"
version = "2.0.0"
description = "YAML glue for structural templating and processing"
authors = ["Laurent Bovet <laurent.bovet@windmaster.ch>", "Janez Troha <dz0ny@ubuntu.si>"]

[tool.poetry.dependencies]
python = ">=3.8"
"ruamel.yaml" = ">=0.16.5"
yaql = {git = "https://github.com/dz0ny/yaql.git"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"
isort = "^5.6.4"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
